# booruViewer

./: .gitignore  AGENTS.md  README.md  app.bat  config.json  database.bat  migrate_legacy.bat  pyproject.toml  requirements.txt  setup.bat
app/: build_index.py  build_state.py  config.py  database.py  gap_finder.py  ingest_posts.py  main.py  migrate_legacy.py  schemas.py  sync_posts.py  tag_engine.py  url_utils.py  vector_store.py
app/services/: search_service.py
tasks/: lessons.md  todo.md
tests/: test_build_state.py  test_gap_finder.py  test_main.py  test_search_service.py  test_sync_posts.py
web_local/: index.html  index_mobile.html
